Changes to be committed: 	modified:   css/furimuri.css 	modified:   index.html 	modified:   js/furimuri.js Modify loading effect z-index to 1050. Footer text-align center. Toggle the navber fixed on top in mobile devices.

--- a/css/furimuri.css
+++ b/css/furimuri.css
@@ -26,7 +26,7 @@ html {
 }
 
 div.content {
-	margin-top: 50px !important;
+	padding-top: 50px;
 }
 /* title & nav bar */
 a.title {
@@ -70,9 +70,20 @@ img.smallIcon {
 	margin: 5px 5px 30px 5px;
 }
 
+div.myFooter {
+	text-align: center;
+}
+
 .fancybox-wrapper a img{ display:inline-block; vertical-align:top; width:33%;}
 
 @media screen and (max-width: 768px) {
+	nav.myNav {
+		position: fixed;
+		top:0;
+		right: 0;
+		left: 0;
+		z-index: 1030;
+	}
 	button.myNavBtn {
 		display: "";
 	}
@@ -93,5 +104,12 @@ img.smallIcon {
 	}
 	div.myLeftNavItem {
 		display: "";
+	}
+	nav.myNav {
+		position: relative;
+		display: flex;
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
+		z-index: 1030;
 	}
 }
